[package]
name = "zeitstempel"
version = "0.1.0"
authors = ["Jan-Erik Rediger <janerik@fnordig.de>"]
edition = "2018"
description = "A timestamp you can serialize, and it might include suspend time."
license = "MPL-2.0"

[dependencies]
cfg-if = "1.0.0"
once_cell = "1.5.2"

[target.'cfg(any(target_os = "linux", target_os = "android", target_os = "macos", target_os = "ios"))'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies.winapi]
version = "0.3"
features = ["realtimeapiset"]
