[package]
name = "zeitstempel"
version = "0.1.2-alpha.0"
authors = ["Jan-Erik Rediger <jrediger@mozilla.com>"]
edition = "2018"
description = "A timestamp you can serialize, and it might include suspend time."
license = "MPL-2.0"
repository = "https://github.com/badboy/zeitstempel"

[dependencies]
cfg-if = "1.0.0"
once_cell = "1.5.2"

[target.'cfg(any(target_os = "linux", target_os = "android", target_os = "macos", target_os = "ios"))'.dependencies]
libc = "0.2"

[features]
# Use a Windows 10+ API for querying time
win10plus = []
